log
Thu 21 Mar 2024 04:10:53 PM UTC: 
 tests:  0|5
total_score: 0/70
89a008d
Thu 21 Mar 2024 04:19:12 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|5
total_score: 0/70
84fcc55
Thu 21 Mar 2024 04:19:51 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
7ba28ae
Thu 21 Mar 2024 04:20:57 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:17: error: expected expression before ‘List’
   51 |   imprime_lista(List *L);
      |                 ^~~~
Compilation failed
10c6f76
Thu 21 Mar 2024 04:22:37 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
b287f3e
